# rail_agile_grasp

./: README.md
agile_grasp_base/: CMakeLists.txt  README.md  package.xml
agile_grasp_base/include/agile_grasp/: grasp_localizer.h
agile_grasp_base/launch/: rail.launch  rail_random.launch
agile_grasp_base/msg/: Grasps.msg
agile_grasp_base/src/agile_grasp/: grasp_localizer.cpp
agile_grasp_base/src/nodes/: find_grasps.cpp
rail_agile_grasp/: CMakeLists.txt  package.xml
rail_agile_grasp_msgs/: CMakeLists.txt  README.md  package.xml
rail_agile_grasp_msgs/action/: ClickImagePoint.action  FindGrasps.action  RailAgileGrasp.action  SelectedGrasp.action
rail_agile_grasp_msgs/msg/: Grasps.msg  GraspsWithWorkspace.msg  Workspace.msg
rail_agile_grasp_msgs/srv/: ChangePointCloud.srv
rail_agile_nodes/: CMakeLists.txt  package.xml
rail_agile_nodes/include/rail_agile_nodes/: GraspSampler.h  PointCloudClicker.h  PointCloudFilter.h  PointCloudInterleaver.h  PoseWithHeuristic.h
rail_agile_nodes/launch/: find_grasps.launch  two_camera.launch
rail_agile_nodes/src/: GraspSampler.cpp  PointCloudClicker.cpp  PointCloudFilter.cpp  PointCloudInterleaver.cpp  PoseWithHeuristic.cpp
