<?xml version="1.0"?>
<package>
  <name>agile_grasp_base</name>
  <version>0.7.2</version>
  <description>The agile_grasp ROS package. AGILE stands for Antipodal Grasp Identification and LEarning. The package 
  finds antipodal grasps in point clouds.  This package has been modified to work with the new RAIL agile nodes, by
  adding publishers, services, and actions to connect with the new nodes and disable the grasp classification step of
  the AGILE pipeline.</description>
  <maintainer email="atp@ccs.neu.edu">Andreas ten Pas</maintainer>
  <license>BSD</license>
  <url type="website">http://wiki.ros.org/agile_grasp</url>
  <author>Andreas ten Pas</author>
  <author email="dekent@gatech.edu">David Kent</author>
  
  <buildtool_depend>catkin</buildtool_depend>
 
	<build_depend>cmake_modules</build_depend>
	<build_depend>cv_bridge</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>liblapack-dev</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>message_generation</build_depend>   
  <build_depend>roscpp</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>rail_agile_grasp_msgs</build_depend>
  <build_depend>tf</build_depend>
  
  <run_depend>cmake_modules</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>eigen_conversions</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>liblapack-dev</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>  
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>rail_agile_grasp_msgs</run_depend>
  <run_depend>tf</run_depend>

</package>
